# sl29.games.maze

./: .gitignore  README.md  README.rst  pyproject.toml
doc/: index.rst
src/sl29/games/: maze.py
